--- a/src/components/DeckForm.module.css
+++ b/src/components/DeckForm.module.css
@@ -5,5 +5,11 @@
 }
 
 .input {
-  padding: .5rem;
+  padding: 0.5rem;
+}
+
+.radiosWrapper {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
 }
